fixed nav exercise

--- a/Nav/navbar.html
+++ b/Nav/navbar.html
@@ -12,6 +12,9 @@
       <div class="title">
         <h1>Navbar</h1>
       </div>
+      <div class="hamburger">
+        <img src="menu-icon.svg" alt="hamburger" />
+      </div>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">Link</a></li>
